packages/okidoc-md/src/__snapshots__/buildDocumentation.spec.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildDocumentation should build documentation for class  1`] = `
"<!-- Generated automatically. Update this documentation by updating the source code. -->

# Documentation

## m1()

## m2()

## m3()
"
`;

exports[`buildDocumentation should build documentation for functions  1`] = `
"<!-- Generated automatically. Update this documentation by updating the source code. -->

# Documentation

## functionDeclaration()

## varFunctionExpression()

## letFunctionExpression()

## constFunctionExpression()

## constArrowFunction()

## exportConstArrowFunction()

## exportDefaultConstArrowFunction()
"
`;

exports[`buildDocumentation should show readable error from \`documentation.js\` 1`] = `
[SyntaxError: documentation source: Unexpected token (4:9)
  2 | class API {
  3 |   /** */
> 4 |   public show() {}
    |         ^
  5 | 
  6 | }]
`;
